Integrating RunProcs DB Table (data simulation) into the Dashboard

--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -101,13 +101,13 @@
                     </h:panelGrid>
                 </h:panelGrid>
             </rich:tab>
-            <h:outputScript library="jqPlot" name="plots.js" /> 
+            <h:outputScript library="jqPlot" name="createplots.js" /> 
             <h:form>
                 <a4j:poll id="poll" 
                           interval="2000" 
                           enabled="#{dashboardBean.pollEnabled}" 
                           render="poll,Dashboard"
-                          action="#{dashboard.updateData()}"/>
+                          action="#{dashboardBean.updateData(5)}"/>
             </h:form>            
             
             <rich:tab header="Management"
