--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -280,7 +280,7 @@
                     </rich:column>
                     <rich:column>
                         <f:facet name="header">User</f:facet>
-                        <h:outputText value="#{process.user}" />
+                        <h:outputText value="#{process.user.userName}" />
                     </rich:column>
                     <rich:column>
                         <f:facet name="header">Name</f:facet>
