--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -299,6 +299,18 @@
                             <h:outputText value="#{process.priority}" />
                         </rich:column>
                         <rich:column>
+                            <f:facet name="header">Status</f:facet>                                                        
+                            <h:outputText value="#{process.status}" 
+                                          style="color: green;" 
+                                          rendered="#{process.status.equalsIgnoreCase('finished')}"/>
+                            <h:outputText value="#{process.status}" 
+                                          style="color: red;" 
+                                          rendered="#{process.status.equalsIgnoreCase('running')}"/>
+                            <h:outputText value="#{process.status}" 
+                                          style="color: blue;" 
+                                          rendered="#{process.status.equalsIgnoreCase('waiting')}"/>                                                      
+                        </rich:column>
+                        <rich:column>
                             <f:facet name="header">Start time</f:facet>
                             <h:outputText value="#{process.startTime}" />
                         </rich:column>
@@ -324,19 +336,29 @@
                 <br />
                 <br />
                 <h:form id="scriptForm">
-                    <rich:panel style="width: 50%">
+                    <rich:panel style="width: 50%" id="scriptPanel">
                         <f:facet name="header">
                             <h:outputText value="Execute scripts" />
                         </f:facet>                                                
-                        <h:panelGrid columns="3">      
-                            <rich:fileUpload>
-                            </rich:fileUpload>
-                            <h:selectOneMenu value="">
-                                <f:selectItem itemLabel="-" itemValue="-" />
-                                <f:selectItem itemLabel="Type 1" itemValue="1" />
-                                <f:selectItem itemLabel="Type 2" itemValue="2" />
-                            </h:selectOneMenu>    
-                            <a4j:commandButton value="Submit" />
+                        <h:panelGrid columns="2">      
+                            <h:panelGrid>
+                                <rich:fileUpload fileUploadListener="#{fileUploadBean.listener}" 
+                                                 id="upload"
+                                                 maxFilesQuantity="10">
+                                    <a4j:ajax event="uploadcomplete" execute="@none" render="typeScriptPanel" />
+                                </rich:fileUpload>
+                            </h:panelGrid>
+                            <h:panelGrid id="typeScriptPanel">
+                                <h:selectOneMenu value="#{fileUploadBean.type}">
+                                    <f:selectItem itemLabel="Type 0" itemValue="0" />
+                                    <f:selectItem itemLabel="Type 1" itemValue="1" />
+                                    <f:selectItem itemLabel="Type 2" itemValue="2" />
+                                </h:selectOneMenu>                                
+                                <a4j:commandButton value="Submit" 
+                                                   action="#{fileUploadBean.clearUploadData}"
+                                                   disabled="#{fileUploadBean.size &lt; 1}"
+                                                   render="scriptPanel"/>
+                            </h:panelGrid>
                         </h:panelGrid>                        
                     </rich:panel>
                 </h:form>                
