--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -22,15 +22,11 @@
         <!--h:outputScript library="jqPlot" name="jquery.min.js"/-->
         <h:outputScript library="jqPlot" name="jquery.jqplot.min.js"/>
         <h:outputScript library="jqPlot" name="plugins/jqplot.pieRenderer.min.js"/>
-        <h:outputScript library="js" name="abacus.js"/>
-        
-        <rich:panel style="background-image: url(resources/img/header-blue-plain.jpg); 
-                           background-size: 100%;
-                           height: 100px;
-                           opacity: 0.7;
-                           text-align: right">  
-            <h:panelGrid columns="2" style="text-align: right; margin: auto 0 auto auto;">
-                <h:outputText value=" #{userBean.username} " 
+        <h:outputScript library="js" name="abacus.js"/>                        
+        <rich:panel id="headerPanel">  
+            <h:panelGrid id="headerGrid"
+                         columns="2" style="text-align: right; margin: auto 0 auto auto;">
+                <h:outputText value="#{userBean.username} " 
                               style="font-weight: bolder;" />
                 <h:outputLink value="logout.xhtml">
                     <h:graphicImage library="img" name="logout.png" width="32px" />
@@ -917,12 +913,10 @@
             </rich:tab>
         </rich:tabPanel>
         </h:form>
-        <div style="position: absolute; bottom: 0; width: 99%;">
-            <h:graphicImage library="img" 
-                            name="silver-footer.jpg" 
-                            width="100%" 
-                            height="40px" 
-                            style="opacity: 0.5;"/>
+        <div id="divFooter">
+            <h:graphicImage id="graphicFooter"
+                            library="img" 
+                            name="silver-footer.jpg"/>
         </div>
     </h:body>
 </f:view>
